--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/slider/main-slider.css">
+<!-- ----------------------------------------------------------------------------- -->
+    <script src="./js/jquery-3.5.1.min.js"></script>
+    <script src="./js/slider/slider-main.js"></script>
     <title>Jquery-projects</title>
 </head>
 <body>
-    
+    <div class="slideshow">
+        <img src="./img/slider/slide-1.jpg" alt="">
+        <img src="./img/slider/slide-2.jpg" alt="">
+        <img src="./img/slider/slide-3.jpg" alt="">
+        <img src="./img/slider/slide-4.jpg" alt="">
+    </div>
 </body>
 </html>
