--- a/index.html
+++ b/index.html
@@ -5,17 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/slider/main-slider.css">
+
 <!-- ----------------------------------------------------------------------------- -->
-    <script src="./js/jquery-3.5.1.min.js"></script>
+    <script src="./js/slider/jquery-1.10.2.min.js"></script>
+<script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/slider/slider-main.js"></script>
     <title>Jquery-projects</title>
 </head>
 <body>
     <div class="slideshow">
-        <img src="./img/slider/slide-1.jpg" alt="">
-        <img src="./img/slider/slide-2.jpg" alt="">
-        <img src="./img/slider/slide-3.jpg" alt="">
-        <img src="./img/slider/slide-4.jpg" alt="">
+        <div class="slideshow-slides">
+            <a href="" class="slide " id="slide-1"><img src="./img/slider/slide-1.jpg" alt="" width="1600" height="465"></a>
+            <a href="" class="slide" id="slide-2"><img src="./img/slider/slide-2.jpg" alt="" width="1600" height="465"></a>
+            <a href="" class="slide " id="slide-3"><img src="./img/slider/slide-3.jpg" alt="" width="1600" height="465"></a>
+            <a href="" class="slide " id="slide-4"><img src="./img/slider/slide-4.jpg" alt="" width="1600" height="465"></a>
+        </div>
+        <div class="slideshow-nav">
+            <a href="#" class="prev">Prev</a>
+            <a href="#" class="next">Next</a>
+        </div>
+        <div class="slideshow-indicator"></div>
     </div>
 </body>
 </html>
